syntax = "proto3";

package sea.api.sealet.date.v1;
import "google/protobuf/descriptor.proto";
// import
// "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options/annotations.proto";
// import "github.com/mwitkow/go-proto-validators/validator.proto";

option go_package = "github.com/kaydxh/sea/openapi-spec/sealet/date/v1;date";

service DateService {
  rpc Now(DateRequest) returns (DateResponse) {};
}

message DateRequest {
  string request_id = 1;
}

message DateResponse {
  string request_id = 1 [json_name = "RequestId"];
  string date = 2 [json_name = "Date"];
}
